Fixed extra space at the top of the page by adding overflow;hidden property

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ html,body{
 	background:#111;
 	padding: 0px;
 	margin: 0px;
+	overflow: hidden;
+	position:relative;
 }
 
 html{
@@ -70,7 +72,7 @@ img {
 
 #particlesJS{
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position:absolute;
   z-index:0;
 }
